--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -13,7 +13,7 @@
 		{% endif %}
 		{{ form_start(contactForm) }}
 		{{ form_widget(contactForm) }}
-		<button>{{ button_label|default('Envoyer') }}</button>
+		<button class="btn-principal">{{ button_label|default('Envoyer') }}</button>
 		{{ form_end(contactForm) }}
 	</form>
 
