--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -20,13 +20,15 @@
 				<a href="mailto:{{ societe.email }}">{{ societe.email }}</a>
 			</p>
 		</div>
-		<div class="footer-nav">
-			<button class="btn-principal">
-				Plan du site
-			</button>
-			<button class="btn-principal">
-				Mentions légales
-			</button>
-		</div>
+		<nav class="footer-nav-buttons">
+			<ul>
+				<li>
+					<a href="">Plan du site</a>
+				</li>
+				<li>
+					<a href="">Mentions légales</a>
+				</li>
+			</ul>
+		</nav>
 	</div>
 </footer>
