--- a/templates/categorie/_delete_form.html.twig
+++ b/templates/categorie/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_categorie_delete', {'id': categorie.id}) }}" onsubmit="return confirm('Êtes-vous sûr(e) de vouloir supprimer?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ categorie.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="btn-principal">Supprimer</button>
 </form>
