--- a/templates/categorie/edit.html.twig
+++ b/templates/categorie/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('categorie/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <button><a href="{{ path('app_categorie_index') }}">Retour à la liste</a></button>
+    <a class="btn-principal" href="{{ path('app_categorie_index') }}">Retour à la liste</a>
 
     {{ include('categorie/_delete_form.html.twig') }}
 {% endblock %}
