--- a/templates/option/new.html.twig
+++ b/templates/option/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('option/_form.html.twig') }}
 
-   <button><a href="{{ path('app_option_index') }}">Retour à la liste</a></button>
+   <a class="btn-principal" href="{{ path('app_option_index') }}">Retour à la liste</a>
 {% endblock %}
