--- a/templates/reservation/_delete_form.html.twig
+++ b/templates/reservation/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_reservation_delete', {'id': reservation.id}) }}" onsubmit="return confirm('Êtes-vous sûr(e) de vouloir annuler?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ reservation.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="btn-principal">Supprimer</button>
 </form>
