--- a/templates/reservation/edit.html.twig
+++ b/templates/reservation/edit.html.twig
@@ -10,13 +10,10 @@
 	{% if reservation.statut != 'annulée' and is_granted('ROLE_USER') and app.user == reservation.user %}
 		<form method="post" action="{{ path('app_reservation_cancel', {'id': reservation.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler cette réservation ?');">
 			<input type="hidden" name="_token" value="{{ csrf_token('cancel' ~ reservation.id) }}">
-			<button class="btn">Annuler ma réservation</button>
+			<button class="btn-principal">Annuler ma réservation</button>
 		</form>
 	{% endif %}
-
-	<button>
-		<a href="{{ path('app_reservation_index') }}">Retour à la liste</a>
-	</button>
+		<a class="btn-principal" href="{{ path('app_reservation_index') }}">Retour à la liste</a>
 	{% if is_granted('ROLE_ADMIN') %}
 		{{ include('reservation/_delete_form.html.twig') }}
 	{% endif %}
