--- a/templates/tarif/_form.html.twig
+++ b/templates/tarif/_form.html.twig
@@ -1,6 +1,6 @@
 <form class="form-container" method="POST">
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn-principal">{{ button_label|default('Enregistrer') }}</button>
+    <button class="btn-principal">{{ button_label|default('Sauvegarder') }}</button>
 {{ form_end(form) }}
 </form>
